<resources>
    <string name="app_name">HomeWork3</string>
    <string name="button1Name">Стиль 1</string>
    <string name="button2Name">Стиль 2</string>
    <string name="button3Name">Стиль 3</string>
    <string name="button4Name">Новый стиль</string>
    <string name="buttonAct2Name">Применить стиль</string>
    <string name="lodka_name">Лодка ПВХ Ривьера 3200 СК </string>
    <string name="lodka">
        Трехместная моторная лодка ПВХ Ривьера 3200 СК
        с передвижным сидением (ликтрос-ликпаз), слань из
        4-х частей с закрепленными А-профилем и Н-профилем,
        стрингера, киль, стационарный транец. \n
        Основные параметры: \n
        Пассажировместимость: 3 чел \n
        Грузоподъемность: 500 кг \n
        Масса лодки в коробке: 44 кг \n
        Масса пайола в сумке: 12.3 кг \n
        Количество отсеков: 3+киль \n
        Транцевая доска: 18 мм \n
        Мощность двигателя: 15 л.с. \n
        Плотность ткани ПВХ: 900 г/м2 \n
        Длина: 3200 мм \n
        Ширина: 1530 мм \n
        Кокпит: 2200*630 мм \n
        Диаметр баллона: 420 мм \n
        Высота транца: 38 см (381 мм или 15 дюймов) \n
        Толщина пола: 9 мм \n
        Сливной клапан: есть \n

        Комплектация: весло разборное - 2 шт, сидение - 2 шт,
        фанерный пол сборный (слани), алюминиевые стрингера,
        насос, ремнабор (ткань, клей), паспорт, сумка для лодки,
        сумка для сланей.\n

        Упаковка лодки:\n
        1. Проверенная на заводе лодка заворачивается в полиэтилен.\n
        2. Лодка, весла, скамейки, насос, рем.набор, паспорт
        укладываются в сумку для переноски лодки.\n
        3. Сложенная в сумку лодка оборачивается в слой толстого
        полиэтилена для транспортировки.\n
        4. Сумка со сланями оборачивается в слой толстого
        полиэтилена для транспортировки.\n
        5. В транспортной компании лодка упаковывается в
        жесткую обрешетку, либо в жесткий паллетный борт.\n

        Преимущества Ривьера 3200 СК: - усиление резиновым брусом
        по килю, - привальный брус с волноотбойником по периметру,
        - 4 леерных троса, - сдвижные сидения, - резиновый фиксатор
        транца, - брызгозащитные фартуки комингсы, - ручка шкипера,
        - носовое кольцо крепления бензобака, - усиление доп.
        шайбами под стрингеры.\n

        Конструкция лодки Ривьера 3200 СК. Кому подойдет эта лодка?
        Лодка Ривьера 3200 СК является килевой. СК расшифровывается,
        как "слань", "киль". Лодка имеет классический фанерный пайол
        (слань), состоящий из 4 щитов, которые соединяются
        закрепленными на них H-профилями. Щиты скрепляются друг с
        другом вставкой один в другой (смотрите на видео). Ривьера
        3200 СК подойдет тем, кому нужна универсальная лодка для
        охоты, рыбалки или просто для отдыха на водоеме с семьей
        и друзьями.\n

        После того, как лодка Ривьера 3200 СК появилась на рынке,
        она моментально завоевала сердца покупателей по всей России.
        Почему это произошло? Огромная заслуга ее ходовых характеристик,
        которые обеспечивают выверенная форма надувного киля и
        плавный обвод баллонов. Еще одним не менее важным фактором
        почему многие предпочитают остановить свой выбор именно на
        Уфимских лодках "Ривьера" - их высочайшее качество изготовление.
        Лодки проходят многоэтапный технологический процесс производства
        с контролем качества сборки на каждом этапе (отдел ОТК).
        Уфимский завод имеет собственное производство лодочной фурнитуры
        (весла, уключины, держатели, ручки). Все эти мощности позволяют
        создавать лодки высочайшего качества сборки!
    </string>
</resources>
