<?xml version="1.0" encoding="utf-8"?>

<ScrollView

xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="4dp"
        tools:context="com.example.nazir.homework3.MainActivity" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:isScrollContainer="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="368dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/lodka"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                style="@style/HeaderStyle"
                android:text="@string/lodka_name"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lodka"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="8dp" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonsLayoutHeight"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button1Name"
                    style="@style/Style1" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button2Name"
                    style="@style/Style2" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button3Name"
                    style="@style/Style3" />

            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/buttonsLayoutHeight"
                android:text="@string/button4Name" />

        </LinearLayout>
</ScrollView>
